--- a/test_problems/SConscript
+++ b/test_problems/SConscript
@@ -183,12 +183,10 @@ CompileAndTest('ChemEquil_ionizedGas',
                comparisons=[('table_blessed.csv', 'table.csv')])
 #CompileAndTest('CpJump', 'CpJump', 'CpJump', 'output_blessed.txt')
 CompileAndTest('cxx_ex',
-               comparisons=[('eq1_blessed.csv', 'eq1.csv'),
-                            ('tr1_blessed.csv', 'tr1.csv'),
-                            ('tr2_blessed.csv', 'tr2.csv')],
+               comparisons=[('eq1_blessed.csv', 'eq1.csv')],
                tolerance=3e-3,
                threshold=1e-7,
-               artifacts=['eq1.dat', 'tr1.dat', 'tr2.dat'])
+               artifacts=['eq1.dat'])
 
 diamond = CompileAndTest('diamondSurf-xml', 'diamondSurf', 'diamondSurf',
     'runDiamond_blessed.out', options='diamond_blessed.xml')
@@ -239,6 +237,10 @@ Test('cxx-flamespeed', 'cxx_samples', '#build/samples/cxx/flamespeed/flamespeed'
 Test('cxx-kinetics1', 'cxx_samples', '#build/samples/cxx/kinetics1/kinetics1', None,
      comparisons=[('kin1_blessed.csv', 'kin1.csv')],
      artifacts=['kin1.dat'])
+Test('cxx-gas-transport', 'cxx_samples',
+     '#build/samples/cxx/gas_transport/gas_transport', None,
+     comparisons=[('transport_mix_blessed.csv', 'transport_mix.csv'),
+                  ('transport_multi_blessed.csv', 'transport_multi.csv')])
 
 if env['f90_interface'] == 'y':
     Test('f90-demo', 'fortran', '#build/samples/f90/demo', 'f90_demo_blessed.txt',
