--- a/test_problems/SConscript
+++ b/test_problems/SConscript
@@ -37,7 +37,7 @@ PASSED_FILES = {}
 class Test(object):
     def __init__(self, testName, subdir=None, programName=None,
                  blessedName='output_blessed.txt', arguments=(), options='',
-                 artifacts=(), comparisons=(), profiles=(),
+                 artifacts=(), comparisons=(), profiles=(), ignoreLines=(),
                  tolerance=1e-5, threshold=1e-14,
                  dependencies=(), source_files=()):
         self.subdir = subdir or testName
@@ -75,7 +75,7 @@ class Test(object):
             test_blessed_file=blessedName, test_command_options=options,
             test_comparisons=comparisons, test_profiles=profiles,
             test_csv_threshold=threshold, test_csv_tolerance=tolerance,
-            test_ignoreLines=())
+            test_ignoreLines=ignoreLines)
 
         localenv.Depends(env['test_results'], run)
         localenv.Depends(run, env['build_targets'])
@@ -245,6 +245,10 @@ Test('cxx-gas-transport', 'cxx_samples',
 Test('cxx-LiC6-electrode', 'cxx_samples',
      '#build/samples/cxx/LiC6_electrode/LiC6_electrode', None,
      comparisons=[('LiC6_electrode_blessed.csv', 'LiC6_electrode_output.csv')])
+Test('cxx-openmp-ignition', 'cxx_samples',
+     '#build/samples/cxx/openmp_ignition/openmp_ignition',
+     'opmenmp_ignition_blessed.txt',
+     ignoreLines=['Running on'])
 Test('cxx-rankine', 'cxx_samples', '#build/samples/cxx/rankine/rankine',
      'rankine_blessed.txt')
 
