--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -138,6 +138,7 @@ jobs:
       # machine that has previously logged in to cantera.org and trusts
       # that it logged in to the right machine
       - name: Set up SSH key and host for deploy
+        if: github.event_name == 'push' && github.repository_owner == 'Cantera' && github.ref == 'master'
         uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.CTDEPLOY_KEY }}
