--- a/interfaces/cython/SConscript
+++ b/interfaces/cython/SConscript
@@ -83,14 +83,13 @@ localenv.Depends(ext, localenv['cantera_staticlib'])
 
 for f in (mglob(localenv, 'cantera', 'py') +
           mglob(localenv, 'cantera/test', 'py') +
-          mglob(localenv, 'cantera/examples/tutorial', 'py') +
-          mglob(localenv, 'cantera/examples/equilibrium', 'py') +
           mglob(localenv, 'cantera/examples/kinetics', 'py') +
-          mglob(localenv, 'cantera/examples/transport', 'py') +
-          mglob(localenv, 'cantera/examples/reactors', 'py') +
+          mglob(localenv, 'cantera/examples/multiphase', 'py') +
           mglob(localenv, 'cantera/examples/onedim', 'py') +
+          mglob(localenv, 'cantera/examples/reactors', 'py') +
           mglob(localenv, 'cantera/examples/surface_chemistry', 'py') +
-          mglob(localenv, 'cantera/examples/misc', 'py')):
+          mglob(localenv, 'cantera/examples/thermo', 'py') +
+          mglob(localenv, 'cantera/examples/transport', 'py')):
     localenv.Depends(mod, f)
 
 # Determine installation path and install the Python module
