--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: CI
 
 on:
+  repository_dispatch:
+    types: [test]
   push:
     # Build on tags that look like releases
     tags:
@@ -18,11 +20,13 @@ jobs:
   ubuntu-multiple-pythons:
     name: Ubuntu 18.04 with Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     strategy:
       matrix:
         python-version: [ '3.5', '3.6', '3.7', '3.8' ]
       fail-fast: false
     steps:
+    - uses: technote-space/auto-cancel-redundant-job@v1
     - uses: actions/checkout@v2
       name: Checkout the repository
       with:
@@ -46,11 +50,13 @@ jobs:
   macos-multiple-pythons:
     name: macOS with Python ${{ matrix.python-version }}
     runs-on: macos-latest
+    timeout-minutes: 60
     strategy:
       matrix:
         python-version: [ '3.5', '3.6', '3.7', '3.8' ]
       fail-fast: false
     steps:
+    - uses: technote-space/auto-cancel-redundant-job@v1
     - uses: actions/checkout@v2
       name: Checkout the repository
       with:
@@ -78,8 +84,10 @@ jobs:
   coverage:
     name: Coverage
     runs-on: ubuntu-latest
+    timeout-minutes: 360
     needs: [ubuntu-multiple-pythons]
     steps:
+    - uses: technote-space/auto-cancel-redundant-job@v1
     - uses: actions/checkout@v2
       name: Checkout the repository
       with:
@@ -110,7 +118,9 @@ jobs:
   docs:
     name: Build docs
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     steps:
+      - uses: technote-space/auto-cancel-redundant-job@v1
       - uses: actions/checkout@v2
         name: Checkout the repository
         with:
@@ -155,7 +165,9 @@ jobs:
     # Ubuntu 18.04 using Python 2 to run SCons and the system Python 3 for the interface
     name: Python 2 running SCons on Ubuntu 18.04
     runs-on: ubuntu-18.04
+    timeout-minutes: 60
     steps:
+      - uses: technote-space/auto-cancel-redundant-job@v1
       - uses: actions/checkout@v2
         name: Checkout the repository
         with:
@@ -212,11 +224,13 @@ jobs:
   multiple-sundials:
     name: Sundials ${{ matrix.sundials-ver }}
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     strategy:
       matrix:
         sundials-ver: [ 2, 3, 4, 5.3 ]
       fail-fast: false
     steps:
+      - uses: technote-space/auto-cancel-redundant-job@v1
       - uses: actions/checkout@v2
         name: Checkout the repository
         with:
@@ -246,7 +260,9 @@ jobs:
   cython-latest:
     name: Test pre-release version of Cython
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     steps:
+    - uses: technote-space/auto-cancel-redundant-job@v1
     - uses: actions/checkout@v2
       name: Checkout the repository
       with:
@@ -272,6 +288,7 @@ jobs:
   windows:
     name: ${{ matrix.os }}, MSVC ${{ matrix.vs-toolset }}, Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 60
     strategy:
       matrix:
         os: ['windows-2019']
@@ -294,6 +311,7 @@ jobs:
             python-version: '3.8'
       fail-fast: false
     steps:
+      - uses: technote-space/auto-cancel-redundant-job@v1
       - uses: actions/checkout@v2
         name: Checkout the repository
         with:
