--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -280,7 +280,6 @@ jobs:
         run: scons test
 
   # Running of Python examples separated due to significant run time.
-  # Windows requires user interaction on matplotlib (or Agg backend)
   # Additional installation dependencies exist on OSX and systems
   # with older numpy versions.
   python-examples-ubuntu:
@@ -309,3 +308,31 @@ jobs:
       run: python3 `which scons` test
     - name: Run Python examples
       run: python3 `which scons` check-examples
+
+  python-examples-windows:
+    name: Python Examples on windows-2019, Python 3.8
+    runs-on: 'windows-2019'
+    timeout-minutes: 90
+    steps:
+    - uses: actions/checkout@v2
+      name: Checkout the repository
+      with:
+        submodules: recursive
+    - name: Set Up Python
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.8
+        architecture: 'x64'
+    - name: Install Python dependencies
+      run: |
+        python -m pip install -U pip setuptools
+        python -m pip install scons pypiwin32 numpy ruamel.yaml cython h5py matplotlib scipy
+    - name: Build Cantera
+      run: |
+        scons build -j2 boost_inc_dir=%BOOST_ROOT_1_69_0% debug=n VERBOSE=y python_package=full ^
+        msvc_version=14.2 f90_interface=n
+      shell: cmd
+    - name: Test Cantera
+      run: scons test
+    - name: Run Python examples
+      run: scons check-examples
