--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
         python-version: [ '3.5', '3.6', '3.7', '3.8' ]
       fail-fast: false
     steps:
+    - uses: technote-space/auto-cancel-redundant-job@v1
     - uses: actions/checkout@v2
       name: Checkout the repository
       with:
@@ -53,6 +54,7 @@ jobs:
         python-version: [ '3.5', '3.6', '3.7', '3.8' ]
       fail-fast: false
     steps:
+    - uses: technote-space/auto-cancel-redundant-job@v1
     - uses: actions/checkout@v2
       name: Checkout the repository
       with:
@@ -80,9 +82,10 @@ jobs:
   coverage:
     name: Coverage
     runs-on: ubuntu-latest
-    timeout-minutes: 90
+    timeout-minutes: 180
     needs: [ubuntu-multiple-pythons]
     steps:
+    - uses: technote-space/auto-cancel-redundant-job@v1
     - uses: actions/checkout@v2
       name: Checkout the repository
       with:
@@ -115,6 +118,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
+      - uses: technote-space/auto-cancel-redundant-job@v1
       - uses: actions/checkout@v2
         name: Checkout the repository
         with:
@@ -161,6 +165,7 @@ jobs:
     runs-on: ubuntu-16.04
     timeout-minutes: 60
     steps:
+      - uses: technote-space/auto-cancel-redundant-job@v1
       - uses: actions/checkout@v2
         name: Checkout the repository
         with:
@@ -187,6 +192,7 @@ jobs:
         sundials-ver: [ 2, 3, 4, 5.3 ]
       fail-fast: false
     steps:
+      - uses: technote-space/auto-cancel-redundant-job@v1
       - uses: actions/checkout@v2
         name: Checkout the repository
         with:
@@ -218,6 +224,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
+    - uses: technote-space/auto-cancel-redundant-job@v1
     - uses: actions/checkout@v2
       name: Checkout the repository
       with:
@@ -266,6 +273,7 @@ jobs:
             python-version: '3.8'
       fail-fast: false
     steps:
+      - uses: technote-space/auto-cancel-redundant-job@v1
       - uses: actions/checkout@v2
         name: Checkout the repository
         with:
