--- a/samples/f77/SConscript
+++ b/samples/f77/SConscript
@@ -10,7 +10,8 @@ samples = [('ctlib', ['ctlib.f']),
            ('isentropic', ['isentropic.f'])]
 
 ftn_demo = localenv.Object('demo_ftnlib.cpp',
-                           CPPPATH=['#include', localenv['boost_inc_dir']])
+                           CPPPATH=['#include', localenv['boost_inc_dir'],
+                                    localenv['extra_inc_dirs']])
 for program_name, fortran_sources in samples:
     buildSample(localenv.Program, program_name,
                 fortran_sources + ftn_demo,
