--- a/data/liquidvapor.yaml
+++ b/data/liquidvapor.yaml
@@ -25,6 +25,18 @@ phases:
     T: 300.0
     P: 1.01325e+05
   pure-fluid-name: water
+- name: liquid-water
+  elements: [O, H]
+  species: [H2O]
+  thermo: liquid-water-IAPWS95
+  transport: water
+  state:
+    T: 300.0
+    P: 1.01325e+05
+  note: |-
+    Phase definition based on "The IAPWS Formulation 1995 for the
+    Thermodynamic Properties of Ordinary Water Substance for General and
+    Scientific Use," J. Phys. Chem. Ref. Dat, 31, 387, 2002.
 - name: nitrogen
   thermo: pure-fluid
   elements: [N]
