[thermo] Add IAPWS as alternative backend to existing Water wrapper
While the current 'liquid-water-IAPWS95' thermo model only implements liquid
(and supercritical) states, the underlying IAPWS formulation can be extended
beyond in future revisions.

- avoid 'liquid' as part of the nomenclature
- YAML phase name is updated to `water-iapws95`
- Instead of creating a new wrapper, `iapws95` is added as an alternative
  backend to the existing `Water` class

--- a/data/liquidvapor.yaml
+++ b/data/liquidvapor.yaml
@@ -25,7 +25,7 @@ phases:
     T: 300.0
     P: 1.01325e+05
   pure-fluid-name: water
-- name: liquid-water
+- name: water-iapws95
   elements: [O, H]
   species: [H2O]
   thermo: liquid-water-IAPWS95
