--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
     - name: Install Brew dependencies
       run: brew install boost libomp
     - name: Upgrade pip
-      run: python3 -m pip install -U pip setuptools wheel
+      run: python3 -m pip install -U pip 'setuptools>=47.0.0,<48' wheel
     - name: Install Python dependencies
       run: python3 -m pip install ruamel.yaml scons numpy cython h5py pandas
     - name: Build Cantera
@@ -305,7 +305,7 @@ jobs:
           architecture: 'x64'
       - name: Install Python dependencies
         run: |
-          python -m pip install -U pip setuptools
+          python -m pip install -U pip 'setuptools>=47.0.0,<48'
           python -m pip install scons pypiwin32 numpy ruamel.yaml cython h5py pandas
       - name: Build Cantera
         run: |
