--- a/test_problems/SConscript
+++ b/test_problems/SConscript
@@ -230,6 +230,9 @@ Test('cxx-bvp', 'cxx_samples', '#build/samples/cxx/bvp/blasius', None,
 Test('cxx-combustor', 'cxx_samples', '#build/samples/cxx/combustor/combustor', None,
      comparisons=[('combustor_cxx_blessed.csv', 'combustor_cxx.csv')],
      threshold=1e-10, tolerance=2e-4)
+Test('cxx-custom', 'cxx_samples', '#build/samples/cxx/custom/custom', None,
+     comparisons=[('custom_cxx_blessed.csv', 'custom_cxx.csv')],
+     threshold=1e-10, tolerance=2e-4)
 Test('cxx-demo', 'cxx_samples', '#build/samples/cxx/demo/demo',
      'cxx_demo_blessed.txt',
      threshold=1e-10, tolerance=2e-4)
