--- a/samples/cxx/SConscript
+++ b/samples/cxx/SConscript
@@ -5,6 +5,7 @@ Import('env', 'build', 'install', 'buildSample')
 # (subdir, program name, [source extensions], openmp_flag)
 samples = [
     ('combustor', 'combustor', ['cpp'], False),
+    ('demo', 'demo', ['cpp'], False),
     ('flamespeed', 'flamespeed', ['cpp'], False),
     ('kinetics1', 'kinetics1', ['cpp'], False),
     ('gas_transport', 'gas_transport', ['cpp'], False),
