[CI] Fix missing Cython & NumPy dependencies
The Cython package for Python 3 is called cython3. We use python_cmd to
check for Cython now, which is Python 3.

The test comparisons are done with the Python that's running SCons,
which is Python 2 in this test. NumPy needs to be installed for that
Python to be able to do CSV file comparisons in the tests.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -164,7 +164,7 @@ jobs:
         run: |
           sudo apt-get install libboost-dev gfortran scons python3-numpy \
           python3-pip python3-setuptools python3-h5py python3-pandas \
-          python3-ruamel.yaml cython libsundials-dev liblapack-dev \
+          python3-ruamel.yaml python-numpy cython3 libsundials-dev liblapack-dev \
           libblas-dev
       - name: Build Cantera
         run: scons build python_cmd=/usr/bin/python3 blas_lapack_libs=lapack,blas -j2
