--- a/test/data/co2_PR_example.yaml
+++ b/test/data/co2_PR_example.yaml
@@ -21,6 +21,11 @@ species:
     - [3.85746029, 4.41437026e-03, -2.21481404e-06, 5.23490188e-10, -4.72084164e-14,
       -4.8759166e+04, 2.27163806]
     note: L7/88
+  equation-of-state:
+    model: Peng-Robinson
+    a: 3.958134E+11
+    b: 26.6275
+    w_ac: 0.228
 - name: H2O
   composition: {H: 2, O: 1}
   thermo:
@@ -34,7 +39,7 @@ species:
     note: L8/89
   equation-of-state:
     model: Peng-Robinson
-    a: [5.998873E+11, 0]
+    a: 5.998873E+11
     b: 18.9714
     w_ac: 0.344
 - name: H2
@@ -50,7 +55,7 @@ species:
     note: TPIS78
   equation-of-state:
     model: Peng-Robinson
-    a: [2.668423E+10, 0]
+    a: 2.668423E+10
     b: 16.5478
     w_ac: -0.22
 - name: CO
@@ -66,7 +71,7 @@ species:
     note: TPIS79
   equation-of-state:
     model: Peng-Robinson
-    a: [1.607164E+11, 0]
+    a: 1.607164E+11
     b: 24.6549
     w_ac: 0.049
 - name: CH4
@@ -82,7 +87,7 @@ species:
     note: L8/88
   equation-of-state:
     model: Peng-Robinson
-    a: [2.496344E+11, 0]
+    a: 2.496344E+11
     b: 26.8028
     w_ac: 0.01
 - name: O2
@@ -98,7 +103,7 @@ species:
     note: TPIS89
   equation-of-state:
     model: Peng-Robinson
-    a: [1.497732E+11, 0]
+    a: 1.497732E+11
     b: 19.8281
     w_ac: 0.022
 - name: N2
@@ -114,7 +119,7 @@ species:
     note: '121286'
   equation-of-state:
     model: Peng-Robinson
-    a: [1.485031E+11, 0]
+    a: 1.485031E+11
     b: 28.0810
     w_ac: 0.04
 
