--- a/test/data/thermo-models.yaml
+++ b/test/data/thermo-models.yaml
@@ -578,7 +578,7 @@ pr-species:
   equation-of-state:
     model: Peng-Robinson
     units: {length: cm, quantity: mol}
-    a: [2.668423E+10, 0]
+    a: 2.668423E+10
     b: 16.5478
     w_ac: -0.22
 - name: H2O
@@ -594,11 +594,11 @@ pr-species:
   equation-of-state:
     model: Peng-Robinson
     units: {length: cm, quantity: mol}
-    a: [5.998873E+11, 0]
+    a: 5.998873E+11
     b: 18.9714
     w_ac: 0.344
     binary-a:
-      H2: [4 bar*cm^6/mol^2, 40 bar*cm^6/mol^2*K^-1]
+      H2: 4 bar*cm^6/mol^2
       CO2: 7.897e7 bar*cm^6/mol^2
 - name: CO2
   composition: {C: 1, O: 2}
@@ -613,7 +613,7 @@ pr-species:
   equation-of-state:
     model: Peng-Robinson
     units: {length: cm, quantity: mol}
-    a: [3.958134E+11, 0]
+    a: 3.958134E+11
     b: 26.6275
     w_ac: 0.228
 
