[CI] Speed up coverage build
Compiling with the NDEBUG macro defined skips assertion checks, such
as those in standard library code. Skipping these checks allows the
tests to run slightly faster.

Compiling with a system copy of Sundials speeds up running the test
suite slightly because the Sundials library being used is still
compiled with optimizations turned on, as opposed to the code within
Cantera, that has to be compiled without optimizations so that the
line coverage will be accurate.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -101,7 +101,7 @@ jobs:
         architecture: x64
     - name: Install Apt dependencies
       run: |
-        sudo apt-get install libboost-dev gfortran liblapack-dev libblas-dev
+        sudo apt-get install libboost-dev gfortran liblapack-dev libblas-dev libsundials-dev
     - name: Upgrade pip
       run: python3 -m pip install -U pip setuptools wheel
     - name: Install Python dependencies
@@ -109,7 +109,7 @@ jobs:
     - name: Build Cantera
       run: |
         python3 `which scons` build blas_lapack_libs=lapack,blas coverage=y \
-        optimize=n -j2
+        optimize=n no_optimize_flags=-DNDEBUG -j2
     - name: Test Cantera
       run: python3 `which scons` test
     - name: Upload Coverage to Codecov
