Rename cleaning functions and add loggers
The loggers added here will eventually be used to produce all the output
from the build process that we control (that is, it won't replace
anything that SCons prints). The motivation for this change is to have
better configurability of when and where output is sent to the terminal,
for instance, this allows us to easily change to sending error messages
to stderr instead of stdout. Another thing this makes possible is builds
with varying levels of output, for instance, if a user only wants to see
error messages.

--- a/src/SConscript
+++ b/src/SConscript
@@ -57,7 +57,7 @@ if env['use_pch']:
         pch = localenv.GchSh('#src/pch/system.h.gch',
                              localenv['precompiled_header'])
 else:
-    removeFile('src/pch/system.h.gch')
+    remove_file('src/pch/system.h.gch')
     localenv['pch_flags'] = []
     pch = None
 
