Use f strings and brace format in config.h files

--- a/ext/sundials_config.h.in
+++ b/ext/sundials_config.h.in
@@ -8,7 +8,7 @@
 #define SUNDIALS_DOUBLE_PRECISION 1
 #define SUNDIALS_INT32_T 1
 #define SUNDIALS_INDEX_TYPE int32_t
-%(SUNDIALS_USE_GENERIC_MATH)s
-%(SUNDIALS_BLAS_LAPACK)s
+{SUNDIALS_USE_GENERIC_MATH!s}
+{SUNDIALS_BLAS_LAPACK!s}
 #define SUNDIALS_EXPORT
 #define SUNDIALS_DEPRECATED SUNDIALS_EXPORT
