--- a/include/cantera/base/config.h.in
+++ b/include/cantera/base/config.h.in
@@ -3,10 +3,10 @@
 
 //---------------------------- Version Flags ------------------//
 // Cantera version -> this will be a double-quoted string value
-%(CANTERA_VERSION)s
+{CANTERA_VERSION!s}
 
 // Just the major + minor version (i.e. 2.2 instead of 2.2.0)
-%(CANTERA_SHORT_VERSION)s
+{CANTERA_SHORT_VERSION!s}
 
 //------------------------ Fortran settings -------------------//
 
@@ -30,33 +30,33 @@ typedef int ftnlen;       // Fortran hidden string length type
 
 // Define this if Fortran adds a trailing underscore to names in object files.
 // For linux and most unix systems, this is the case.
-%(FTN_TRAILING_UNDERSCORE)s
+{FTN_TRAILING_UNDERSCORE!s}
 
 
-%(CT_SUNDIALS_VERSION)s
+{CT_SUNDIALS_VERSION!s}
 
 //-------- LAPACK / BLAS ---------
 
-%(LAPACK_FTN_STRING_LEN_AT_END)s
-%(LAPACK_NAMES_LOWERCASE)s
-%(LAPACK_FTN_TRAILING_UNDERSCORE)s
-%(CT_USE_LAPACK)s
+{LAPACK_FTN_STRING_LEN_AT_END!s}
+{LAPACK_NAMES_LOWERCASE!s}
+{LAPACK_FTN_TRAILING_UNDERSCORE!s}
+{CT_USE_LAPACK!s}
 
-%(CT_USE_SYSTEM_EIGEN)s
-%(CT_USE_SYSTEM_FMT)s
-%(CT_USE_SYSTEM_YAMLCPP)s
-%(CT_USE_DEMANGLE)s
+{CT_USE_SYSTEM_EIGEN!s}
+{CT_USE_SYSTEM_FMT!s}
+{CT_USE_SYSTEM_YAMLCPP!s}
+{CT_USE_DEMANGLE!s}
 
 //--------- operating system --------------------------------------
 
 // The configure script defines this if the operating system is Mac
 // OS X, This used to add some Mac-specific directories to the default
 // data file search path.
-%(DARWIN)s
+{DARWIN!s}
 
 // Identify whether the operating system is Solaris
 // with a native compiler
-%(SOLARIS)s
+{SOLARIS!s}
 
 //---------- C++ Compiler Variations ------------------------------
 
@@ -70,12 +70,12 @@ typedef int ftnlen;       // Fortran hidden string length type
 //
 // Note, on other systems that declaration is treated as a definition
 // and this leads to multiple defines at link time
-%(NEEDS_GENERIC_TEMPL_STATIC_DECL)s
+{NEEDS_GENERIC_TEMPL_STATIC_DECL!s}
 
 //-------------- Optional Cantera Capabilities ----------------------
 
 //    Enable Sundials to use an external BLAS/LAPACK library if it was
 //    built to use this option
-%(CT_SUNDIALS_USE_LAPACK)s
+{CT_SUNDIALS_USE_LAPACK!s}
 
 #endif
